@@ -1,0 +1,19 @@
+package TestCase::Allow {
+  use TestCase::Allow::PrivateData;
+  
+  sub allow_test : int () {
+    my $pdata = new TestCase::Allow::PrivateData;
+    
+    $pdata->{x} = 2;
+    unless ($pdata->{x} == 2) {
+      return 0;
+    }
+    
+    $TestCase::Allow::PrivateData::X = 3;
+    unless ($TestCase::Allow::PrivateData::X == 3) {
+      return 0;
+    }
+    
+    return 1;
+  }
+}
