@@ -1,0 +1,10 @@
+package TestCase::Allow::PrivateData {
+  allow TestCase::Allow;
+  
+  our $X : int;
+  has x : int;
+  
+  private sub foo : int () {
+    return 3;
+  }
+}
