@@ -1,5 +1,9 @@
 0.0417 2018-02-22
   - add private and public descriptor to sub declaration
+  - add allow syntax to allow to accsess to private things.
+    
+    allow TestCase::Allow;
+    
 0.0416 2018-02-19
   - native sub routine prefix is changed from SPVM_NATIVE_ to SPNATIVE__
     // Before
